[package]
name = "anchor-safe-math"
version = "0.1.0"
edition = "2018"
authors = ["Pavlos Polianidis <info@apocentre.com>"]
repository = "https://github.com/Apocentre/anchor-safe-math"
description = "Safe Math wrapper for the primitive numberic types used in an Anchor project"
license = "MIT"
homepage = "https://github.com/Apocentre/anchor-safe-math"
documentation = "https://github.com/Apocentre/anchor-safe-math/README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = "0.20.1"
