[package]
name = "anchor-safe-math"
version = "0.2.0"
edition = "2018"
authors = ["Pavlos Polianidis <info@apocentre.com>"]
repository = "https://github.com/Apocentre/anchor-safe-math"
description = "Safe Math wrapper for the primitive numberic types used in an Anchor project"
homepage = "https://github.com/Apocentre/anchor-safe-math"
documentation = "https://docs.rs/anchor-safe-math/"
readme = "README.md"
keywords = ["solana", "anchor"]
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", version = "0.25.0" }
